--- a/face_recognition_section2.ipynb
+++ b/face_recognition_section2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -34,25 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from skimage.feature import hog\n",
-    "from skimage import data, exposure\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 122
-    },
-    "colab_type": "code",
-    "id": "vWVpNb8qujbA",
-    "outputId": "24e2bcc4-b1c9-4a46-9ec2-d4b13687eb62"
-   },
-   "outputs": [],
-   "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive/')"
+    "from skimage import data, exposure"
    ]
   },
   {
@@ -77,20 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "9aB8EjYdq0_L"
-   },
-   "outputs": [],
-   "source": [
-    "optimal_svm_c = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -117,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -145,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -171,8 +140,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load and prepare data \n",
+    "\n",
+    " Modify the `path` variable to point to the dataset\n",
+    " \n",
+    " The expected structure of the folder is: \n",
+    " ```\n",
+    "dataset-root:\n",
+    "    - *.jpg // full data set of images in forma jpg, those images with masks sould have the prefix `masks` in the name and those without masks shoudl have the prefix `faces`\n",
+    "    - anomalies  // folder with pictures considered anomalies to the main data set\n",
+    "\n",
+    " ```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -195,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -203,7 +189,7 @@
    },
    "outputs": [],
    "source": [
-    "def get_data(feature_func, light_run = False):\n",
+    "def get_data(feature_func, light_run = False, *feature_arg):\n",
     "    \"\"\"\n",
     "    feature_func : func\n",
     "        function to extract the features of the images\n",
@@ -224,7 +210,8 @@
     "        image_names = faces[:500] + masks[:500]\n",
     "\n",
     "    for name in image_names:\n",
-    "        img = feature_func(name)\n",
+    "        if os.path.isdir(path+name): continue\n",
+    "        img = feature_func(name, *feature_arg)\n",
     "        data_set.append(img.flatten())\n",
     "        y_labeled.append(0 if name.startswith(prefix) else 1)\n",
     "    data_set = np.array(data_set, dtype=np.int8)\n",
@@ -235,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -260,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -280,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -311,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -339,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -353,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -414,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -516,18 +503,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data prepared\n",
+      "Score 0.865 with K = 2\n",
+      "Data prepared\n",
+      "Score 0.907 with K = 4\n",
+      "Data prepared\n",
+      "Score 0.9030000000000001 with K = 6\n",
+      "Data prepared\n",
+      "Score 0.893 with K = 8\n",
+      "Data prepared\n",
+      "Score 0.9030000000000001 with K = 10\n",
+      "Data prepared\n",
+      "Score 0.908 with K = 12\n",
+      "Data prepared\n",
+      "Score 0.899 with K = 14\n",
+      "Data prepared\n",
+      "Score 0.915 with K = 16\n",
+      "Data prepared\n",
+      "Score 0.9170000000000001 with K = 18\n",
+      "Data prepared\n",
+      "Score 0.906 with K = 20\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def k_means_optimization():\n",
     "    candidates_k = [2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n",
     "    best_k = None\n",
     "    best_performance = 0\n",
     "    for candidate_k in candidates_k:\n",
-    "        X, y = get_data(kmeans_feature, candidate_k, True)\n",
+    "        X, y = get_data(kmeans_feature, True, False, candidate_k)\n",
     "        _, score = evaluate_random_forest(X, y)\n",
-    "        print(\"Score {} with {}\".format(score, candidate_k))\n",
+    "        print(\"Score {} with K = {}\".format(score, candidate_k))\n",
     "        if best_performance < score:\n",
     "            best_performance = score\n",
     "            best_k = candidate_k\n",
@@ -626,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -646,7 +670,7 @@
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +700,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Picture masks1032.jpg : Have a mask :)\n"
+      "Model Random forest predicts that picture masks1032.jpg: Have a mask :).\n"
      ]
     },
     {
@@ -693,23 +717,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Picture faces3030.jpg: Warning you must wear a mask :(\n"
+      "Model Random forest predicts that picture faces3030.jpg: Must wear a mask :(.\n"
      ]
     }
    ],
    "source": [
-    "def predict_mask(model, picture_name):\n",
+    "def predict_mask(model, picture_name, model_name):\n",
     "    image = [hoc_feature(picture_name).flatten()]\n",
-    "    print(\"Picture \" + picture_name +  (\" : Have a mask :)\" if rand_f.predict(image)[0] else \": Warning you must wear a mask :(\"))\n",
+    "    prediction = 'Have a mask :)' if model.predict(image)[0] else 'Must wear a mask :('\n",
+    "    print('Model {} predicts that picture {}: {}.'.format(model_name, picture_name,  prediction))\n",
     "plot_images(load_image('masks1032.jpg'))\n",
-    "predict_mask(rand_f, 'masks1032.jpg')\n",
+    "predict_mask(rand_f, 'masks1032.jpg', 'Random forest')\n",
     "plot_images(load_image('faces3030.jpg'))\n",
-    "predict_mask(rand_f, 'faces3030.jpg')"
+    "predict_mask(rand_f, 'faces3030.jpg', 'Random forest')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Anomalies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +758,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Picture anomalies/anom1.jpg : Have a mask :)\n"
+      "Model SVM predicts that picture anomalies/anom1.jpg: Have a mask :).\n",
+      "Model Random forest predicts that picture anomalies/anom1.jpg: Have a mask :).\n",
+      "Model Logistic regression predicts that picture anomalies/anom1.jpg: Have a mask :).\n"
      ]
     },
     {
@@ -743,7 +777,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Picture anomalies/anom3.jpg: Warning you must wear a mask :(\n"
+      "Model SVM predicts that picture anomalies/anom3.jpg: Have a mask :).\n",
+      "Model Random forest predicts that picture anomalies/anom3.jpg: Must wear a mask :(.\n",
+      "Model Logistic regression predicts that picture anomalies/anom3.jpg: Have a mask :).\n"
      ]
     },
     {
@@ -760,7 +796,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Picture anomalies/anom4.jpg: Warning you must wear a mask :(\n"
+      "Model SVM predicts that picture anomalies/anom4.jpg: Have a mask :).\n",
+      "Model Random forest predicts that picture anomalies/anom4.jpg: Must wear a mask :(.\n",
+      "Model Logistic regression predicts that picture anomalies/anom4.jpg: Have a mask :).\n"
      ]
     },
     {
@@ -777,24 +815,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Picture anomalies/anom2.jpg: Warning you must wear a mask :(\n"
+      "Model SVM predicts that picture anomalies/anom2.jpg: Have a mask :).\n",
+      "Model Random forest predicts that picture anomalies/anom2.jpg: Have a mask :).\n",
+      "Model Logistic regression predicts that picture anomalies/anom2.jpg: Have a mask :).\n"
      ]
     }
    ],
    "source": [
-    "anomalies_name = os.listdir(path + 'anomalies/')\n",
-    "for name in anomalies_name:\n",
-    "    image = load_image('anomalies/'+ name)\n",
-    "    plot_images(image)\n",
-    "    predict_mask(rand_f, 'anomalies/'+name)"
+    "def evaluate_anomalies():\n",
+    "    anomalies_name = os.listdir(path + 'anomalies/')\n",
+    "    models = {\"SVM\": SVC(kernel=\"rbf\", C=100), \"Random forest\": RandomForestClassifier(), \"Logistic regression\": LogisticRegression(solver='lbfgs', max_iter=100000)}\n",
+    "    for name in anomalies_name:\n",
+    "        image = load_image('anomalies/'+ name)\n",
+    "        plot_images(image)\n",
+    "        for model_name in models:\n",
+    "            models[model_name].fit(X, y)\n",
+    "            predict_mask(models[model_name], 'anomalies/'+name, model_name)\n",
+    "evaluate_anomalies()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
